# vigia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
schema/: schema.sql
tests/: conftest.py  test_duffel.py  test_engine.py  test_format.py  test_liteapi.py  test_runtime.py  test_scheduler.py  test_sources.py  test_store.py  test_telegram.py  test_tripwindows.py
vigia/: __init__.py  __main__.py  cities.py  config.py  contracts.py  db.py  engine.py  healthcheck.py  http.py  ratelimit.py  runtime.py  scheduler.py  seed.py  store.py  tick.py  tripwindows.py
vigia/notifiers/: __init__.py  console.py  email.py  format.py  telegram.py
vigia/sources/: aviasales.py  duffel.py  hotellook.py  liteapi.py
