[project]
name = "vigia"
version = "0.1.0"
description = "Vigía — radar de ofertas de viaje (vuelo + hotel) desde ALC"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.4",
    "holidays>=0.50",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
